# allsight

./: .gitignore  README.md  hand_inference.py  inference.py  offline_inference.py  pyproject.toml  requirements.txt
allsight/: finger.py  hand.py
allsight/utils/: img_utils.py
scripts/: hand_inference.py
simulation/: 01_sim_train.py  02_finetune_effort_from_pretrained_sim_model.py  03_display_data_sim_real.py
tactile_finger/: CMakeLists.txt  package.xml
tactile_finger/config/: finger.yaml  joint_trajectory_controller.yaml  joint_trajectory_controller_gazebo.yaml
tactile_finger/launch/: force_regression_data_collection.launch  manipulator_p_bringup.launch  openhand_bringup.launch  touch_detection_data_collection.launch
tactile_finger/src/: 00_force_torque_filter_publisher.py  00_push_point_tf_publisher.py  00_push_point_tf_publisher_parametrized.py  00_tactile_image_publisher.py  01_collect_data_touch_classifer.py  02_collect_data.py  02_collect_data_tip.py  03_collect_data_rotate.py  03_collect_data_yaw.py  04_contact_publisher.py
tactile_finger/src/envs/: finger.py  finger_ros.py  hand.py  robots.py
tactile_finger/src/envs/env_utils/: img_utils.py  logger.py
train/: finetune_classifier.py  finetune_effort_from_pretrained.py  train.py  train_classifier.py  train_effort.py
train/train_history/markers/rrrgggbbb/train_pose_force_pixel_torque_depth_resnet18_sim_pre_6c_aug_meanstd_04-07-2023_20-06-32/: data_statistic.json  (+5 more)
train/utils/: datasets.py  geometry.py  img_utils.py  misc.py  models.py  parametrization.py  surface.py  transforms.py  vis_utils.py
(+6 files in other folders)
